[package]
name = "cw20-bonding"
version = "0.11.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implement basic bonding curve to issue cw20 tokens"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "0.11.1" }
cw2 = "0.13.2"
cw20 = { version = "0.11.1" }
cw20-base = { version = "0.11.1", features = ["library"] }
cw-storage-plus = "0.13.2"
cosmwasm-std = "1.0.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
rust_decimal = { version = "1.14.3" }
integer-sqrt = { version = "0.1.5" }
integer-cbrt = { version = "0.1.2" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }